2003-08-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/op_regex.h:
	* libregex/op_regex.cpp: tidy

	* libfd/op_bfd.cpp: remove obsolete comment

2003-08-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: is_directory(dirname): return true if
	  dirname exists
	* pp/common_option.cpp: validate --image-path parameters

2003-08-22  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386.p4.events: clarify than 128BIT_MMX_UOP count only integer
	  SSE2 ops
	* pp/opreport.cpp: minor spacing change in output

2003-08-22  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: report the kernel pointer size

2003-08-22  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: read new /dev/oprofile/pointer_size
	in preference to kcore. kcore code will eventually go.

2003-08-21  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: update gcc2_compiled. comment
	to reflect reality

2003-08-19  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: really merge when --merge=lib and image name are
	  specified.

2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: output threshold percent when necessary.

2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: remove ELF-based symbol size code

2003-08-15  William Cohen  <wcohen@redhat.com>

	* doc/opcontrol.1.in:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: Correct path to /root/.oprofile/daemonrc.

2003-08-15  Thomas Spatzier  <TSPAT@de.ibm.com>

	* daemon/opd_cookie.h: fix s390 syscall

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: erase_to_last_of() is not a ltrim()

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	Dave Jones suggested this change.

	* module/x86/op_model_p4.c: remove superflous ';' at end of some macro

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h: remove erase_from_last_of()