@@ -44,7 +44,7 @@ AC_SUBST(MODINSTALLDIR)
 AX_MALLOC_ATTRIBUTE
 AX_BUILTIN_EXPECT
 
-AC_SUBST(EXTRA_CFLAGS)
+AC_SUBST(EXTRA_CFLAGS_MODULE)
 
 topdir=`pwd`
 AC_SUBST(topdir)
